--- a/rock_game.html
+++ b/rock_game.html
@@ -1,17 +1,11 @@
  <html> 
 <head>
 
-<script type='text/javascript' src='Rock_game.js'></script>
-
-
+  <script type='text/javascript' src='Rock_game.js'></script>
 </head>
 <body>
-<div id='runGame'></div>
-
-
-<script>
-
-</script>
+  <div id='test'></div>
+  <div id='runGame'></div>
 
 </body>
 
