created try again button

--- a/rock_game.html
+++ b/rock_game.html
@@ -4,8 +4,11 @@
   <script type='text/javascript' src='Rock_game.js'></script>
 </head>
 <body>
-  <div id='test'></div>
-  <div id='runGame'></div>
+  <p id='yourPick'></p>
+
+  <p id='runGame'></p>
+
+<button type='button' onClick=rockpaper()>play Again</button>
 
 </body>
 
