--- a/rock_game.html
+++ b/rock_game.html
@@ -10,6 +10,19 @@
 
 <button type='button' onClick=rockpaper()>play Again</button>
 
+<a>
+<img id='rock' onclick=rockFunction(); src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSZvYjODStkRtY8sXlXJpoQBE4AUOFwtMwz-7sKoRPZ6x1YX6wj' >
+</a>
+
+<a>
+<img id='rock' onclick=paperFunction(); src='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRM1Yiph9ZRVIIErdIKmdbdSPBD91fbMn19PphsvgmybJ6apIYt' >
+</a>
+
+
+<a>
+<img id='rock' onclick=fireballFunction(); src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUa-icpG3O6jyfcKbkg3lPTYpgQIkMdD0U1B3hsEDpgK8TIY5IHg' >
+</a>
+
 </body>
 
 </html>
