aligned the results

--- a/rock_game.html
+++ b/rock_game.html
@@ -2,25 +2,28 @@
 <head>
 
   <script type='text/javascript' src='Rock_game.js'></script>
+   <link type="text/css" rel="stylesheet" href="rockPaperFireball.css">
 </head>
-<body>
+<body bgcolor='beige'>
   <p id='yourPick'></p>
 
   <p id='runGame'></p>
 
-<button type='button' onClick=rockpaper()>play Again</button>
+  <p id='Score'></p>
+
+<!--<button type='button' onClick=rockpaper()>play Again</button>-->
 
 <a>
-<img id='rock' onclick=rockFunction(); src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSZvYjODStkRtY8sXlXJpoQBE4AUOFwtMwz-7sKoRPZ6x1YX6wj' >
+<img class='images' onclick=rockFunction(); src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSZvYjODStkRtY8sXlXJpoQBE4AUOFwtMwz-7sKoRPZ6x1YX6wj' >
 </a>
 
 <a>
-<img id='rock' onclick=paperFunction(); src='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRM1Yiph9ZRVIIErdIKmdbdSPBD91fbMn19PphsvgmybJ6apIYt' >
+<img class='images' onclick=paperFunction(); src='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRM1Yiph9ZRVIIErdIKmdbdSPBD91fbMn19PphsvgmybJ6apIYt' >
 </a>
 
 
 <a>
-<img id='rock' onclick=fireballFunction(); src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUa-icpG3O6jyfcKbkg3lPTYpgQIkMdD0U1B3hsEDpgK8TIY5IHg' >
+<img class='images' onclick=fireballFunction(); src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUa-icpG3O6jyfcKbkg3lPTYpgQIkMdD0U1B3hsEDpgK8TIY5IHg' >
 </a>
 
 </body>
