--- a/rock_game.html
+++ b/rock_game.html
@@ -4,10 +4,12 @@
   <script type='text/javascript' src='Rock_game.js'></script>
    <link type="text/css" rel="stylesheet" href="rockPaperFireball.css">
 </head>
-<body bgcolor='beige'>
+<body bgcolor='black'>
   <p id='yourPick'></p>
 
-  <p id='runGame'></p>
+  <p id='computerPick'></p>
+
+   <p id='winOrLose'></p>
 
   <p id='Score'></p>
 
