--- a/rock_game.html
+++ b/rock_game.html
@@ -7,25 +7,25 @@
    <script type='text/javascript'>
     
   
-     var table= document.createElement("table");
-     var row =table.insertRow(0);
-     var wins = row.insertCell(0);
-     var lose = row.insertCell(1);
-     var tie = row.insertCell(2);
+//      var table= document.createElement("table");
+//      var row =table.insertRow(0);
+//      var wins = row.insertCell(0);
+//      var lose = row.insertCell(1);
+//      var tie = row.insertCell(2);
 
-     var row1 = table.insertRow(1);
-     var win = row1.insertCell(0);
-     var los = row1.insertCell(1);
-     var ti = row1.insertCell(2);
+//      var row1 = table.insertRow(1);
+//      var win = row1.insertCell(0);
+//      var los = row1.insertCell(1);
+//      var ti = row1.insertCell(2);
 
 
-wins.innerHTML = 'WINS';
-lose.innerHTML = 'LOSSES';
-tie.innerHTML = 'TIES';
+// wins.innerHTML = 'WINS';
+// lose.innerHTML = 'LOSSES';
+// tie.innerHTML = 'TIES';
 
-wins.innerHTML = 0;
-lose.innerHTML = 0;
-tie.innerHTML = 0;
+// wins.innerHTML = 0;
+// lose.innerHTML = 0;
+// tie.innerHTML = 0;
 
    </script>
 
@@ -38,7 +38,7 @@ tie.innerHTML = 0;
 
    <p id='winOrLose'></p>
 
-  <p id='Score'>0</p>
+ 
 
 <!--<button type='button' onClick=rockpaper()>play Again</button>-->
 
