--- a/rock_game.html
+++ b/rock_game.html
@@ -5,7 +5,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <link type="text/css" rel="stylesheet" href="rockPaperFireball.css">
 
-   <script type='text/javascript'>
+   <script>
     
   $(document).ready(function(){
 
