--- a/rock_game.html
+++ b/rock_game.html
@@ -9,17 +9,18 @@
     
   $(document).ready(function(){
 
-      $('#rockImg').click(function(){
+      $("#rockImg").on('click',function(){
+        
            rockFunction();
 
       });
 
-       $('#paperImg').click(function(){
+       $('#paperImg').on('click',function(){
           paperFunction();
 
        });
 
-        $('#fireImg').click(function(){
+        $('#fireImg').on('click',function(){
             fireballFunction();
 
         });
@@ -55,11 +56,11 @@
 <!--<button type='button' onClick=rockpaper()>play Again</button>-->
 
 <a>
-<img id='rockImg'  src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSZvYjODStkRtY8sXlXJpoQBE4AUOFwtMwz-7sKoRPZ6x1YX6wj' >
+<img id='rockImg'  src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfFTngdgTosBO72feVQj-SEWxfQKFWGTv89DpYCF3N-QyEsmgX' >
 </a>
 
 <a>
-<img id='paperImg'  src='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRM1Yiph9ZRVIIErdIKmdbdSPBD91fbMn19PphsvgmybJ6apIYt' >
+<img id='paperImg'  src='https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTr6Qlm3dGaHhQh7b9aji93msuL8yuYmFkqsEth5n-LiOzKzgJ4' >
 </a>
 
 
