--- a/rock_game.html
+++ b/rock_game.html
@@ -11,17 +11,59 @@
 
       $("#rockImg").on('click',function(){
         
-           rockFunction();
+           rockFunction('rock');
+
+           if(Wins===5){
+
+             $('#background').empty(); 
+             $('#background').css('background-color','red');
+             $('#background').append('<h1>You Win</h1>');
+
+           }
+           else if(Losses===5){
+              $('#background').empty(); 
+              $('#background').css('background-color','blue');
+              $('#background').append('<h1>You Lose</h1>');
+
+           }
 
       });
 
        $('#paperImg').on('click',function(){
-          paperFunction();
+          paperFunction('paper');
+
+           if(Wins===5){
+
+             $('#background').empty(); 
+             $('#background').css('background-color','red');
+            $('#background').append('<h1>You Win</h1>');
+
+           }
+           else if(Losses===5){
+              $('#background').empty(); 
+              $('#background').css('background-color','blue');
+              $('#background').append('<h1>You Lose</h1>');
+
+           }
 
        });
 
         $('#fireImg').on('click',function(){
-            fireballFunction();
+            fireballFunction('fireball');
+
+             if(Wins===5){
+
+             $('#background').empty(); 
+             $('#background').css('background-color','red');
+             $('#background').append('<h1>You Win</h1>');
+
+           }
+           else if(Losses===5){
+              $('#background').empty(); 
+              $('#background').css('background-color','blue');
+              $('#background').append('<h1>You Lose</h1>');
+
+           }
 
         });
 
@@ -32,7 +74,7 @@
 
 
 </head>
-<body bgcolor='black'>
+<body bgcolor='black' id="background">
   <p id='yourPick'></p>
 
   <p id='computerPick'></p>
