only using 1 function instead of 3 in js file

--- a/rock_game.html
+++ b/rock_game.html
@@ -11,7 +11,7 @@
 
       $("#rockImg").on('click',function(){
         
-           rockFunction('rock');
+           randFunction('rock');
 
            if(Wins===5){
 
@@ -30,7 +30,7 @@
       });
 
        $('#paperImg').on('click',function(){
-          paperFunction('paper');
+          randFunction('paper');
 
            if(Wins===5){
 
@@ -49,7 +49,7 @@
        });
 
         $('#fireImg').on('click',function(){
-            fireballFunction('fireball');
+            randFunction('fireball');
 
              if(Wins===5){
 
